--- a/res/fxml/java-viewer.fxml
+++ b/res/fxml/java-viewer.fxml
@@ -3,21 +3,36 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.geometry.Point3D?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ContextMenu?>
+<?import javafx.scene.control.CustomMenuItem?>
 <?import javafx.scene.control.ProgressIndicator?>
+<?import javafx.scene.control.Slider?>
 <?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.Tooltip?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.StackPane?>
 
 <BorderPane style="-fx-font-family: Galvji; -fx-background-color: #f6f7f5;" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1">
    <center>
-      <SplitPane dividerPositions="0.5" style="-fx-font-size: 25;">
+      <SplitPane dividerPositions="0.5">
          <items>
             <BorderPane>
                <center>
-                  <TextArea fx:id="javaEditor" prefHeight="200.0" prefWidth="200.0" />
+                  <TextArea fx:id="javaEditor" prefHeight="200.0" prefWidth="200.0">
+                     <contextMenu>
+                        <ContextMenu>
+                          <items>
+                              <CustomMenuItem mnemonicParsing="false" text="Font Size">
+                                 <content>
+                                    <Slider fx:id="javaEditorFontSlider" blockIncrement="0.01" max="1.0" />
+                                 </content>
+                              </CustomMenuItem>
+                          </items>
+                        </ContextMenu>
+                     </contextMenu></TextArea>
                </center>
                <bottom>
                   <TextField fx:id="filenameTextField" BorderPane.alignment="CENTER">
@@ -27,7 +42,18 @@
                   </TextField>
                </bottom>
             </BorderPane>
-            <TextArea fx:id="bytecodeViewer" editable="false" prefHeight="200.0" prefWidth="200.0" />
+            <TextArea fx:id="bytecodeViewer" editable="false" prefHeight="200.0" prefWidth="200.0">
+               <contextMenu>
+                  <ContextMenu>
+                    <items>
+                        <CustomMenuItem mnemonicParsing="false" text="Font Size">
+                           <content>
+                              <Slider fx:id="bytecodeViewerFontSlider" blockIncrement="0.01" max="1.0" />
+                           </content>
+                        </CustomMenuItem>
+                    </items>
+                  </ContextMenu>
+               </contextMenu></TextArea>
          </items>
       </SplitPane>
    </center>
@@ -39,7 +65,10 @@
          <children>
             <HBox alignment="CENTER" fillHeight="false" spacing="20.0">
                <children>
-                  <Button fx:id="compileButton" mnemonicParsing="false" text="Compile" />
+                  <Button fx:id="compileButton" mnemonicParsing="false" text="Compile">
+                     <tooltip>
+                        <Tooltip fx:id="compileButtonTooltip" opacity="0.7" text="^ A" textAlignment="CENTER" />
+                     </tooltip></Button>
                </children>
             </HBox>
             <ProgressIndicator fx:id="compileProgress" scaleX="0.5" scaleY="0.5" StackPane.alignment="BOTTOM_RIGHT">
