--- a/res/fxml/java-viewer.fxml
+++ b/res/fxml/java-viewer.fxml
@@ -9,7 +9,6 @@
 <?import javafx.scene.control.Slider?>
 <?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.control.TextArea?>
-<?import javafx.scene.control.TextField?>
 <?import javafx.scene.control.Tooltip?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
@@ -21,7 +20,7 @@
          <items>
             <BorderPane>
                <center>
-                  <TextArea fx:id="javaEditor" prefHeight="200.0" prefWidth="200.0">
+                  <TextArea fx:id="javaEditor" prefHeight="200.0" prefWidth="200.0" promptText="Write Java code here ...">
                      <contextMenu>
                         <ContextMenu>
                           <items>
@@ -34,15 +33,8 @@
                         </ContextMenu>
                      </contextMenu></TextArea>
                </center>
-               <bottom>
-                  <TextField fx:id="filenameTextField" BorderPane.alignment="CENTER">
-                     <BorderPane.margin>
-                        <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
-                     </BorderPane.margin>
-                  </TextField>
-               </bottom>
             </BorderPane>
-            <TextArea fx:id="bytecodeViewer" editable="false" prefHeight="200.0" prefWidth="200.0">
+            <TextArea fx:id="bytecodeViewer" editable="false" prefHeight="200.0" prefWidth="200.0" promptText="Click &quot;Disassemble&quot; or press Control-A to disassemble Java code">
                <contextMenu>
                   <ContextMenu>
                     <items>
@@ -65,7 +57,7 @@
          <children>
             <HBox alignment="CENTER" fillHeight="false" spacing="20.0">
                <children>
-                  <Button fx:id="compileButton" mnemonicParsing="false" text="Compile">
+                  <Button fx:id="compileButton" mnemonicParsing="false" text="Disassemble">
                      <tooltip>
                         <Tooltip fx:id="compileButtonTooltip" opacity="0.7" text="^ A" textAlignment="CENTER" />
                      </tooltip></Button>
