--- a/res/fxml/java-viewer.fxml
+++ b/res/fxml/java-viewer.fxml
@@ -3,6 +3,7 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.geometry.Point3D?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.ContextMenu?>
 <?import javafx.scene.control.CustomMenuItem?>
 <?import javafx.scene.control.ProgressIndicator?>
@@ -61,6 +62,10 @@
                      <tooltip>
                         <Tooltip fx:id="compileButtonTooltip" opacity="0.7" text="^ A" textAlignment="CENTER" />
                      </tooltip></Button>
+                  <CheckBox fx:id="verboseCheckBox" mnemonicParsing="false" text="Verbose">
+                     <tooltip>
+                        <Tooltip fx:id="verboseTooltip" text="^ W" />
+                     </tooltip></CheckBox>
                </children>
             </HBox>
             <ProgressIndicator fx:id="compileProgress" scaleX="0.5" scaleY="0.5" StackPane.alignment="BOTTOM_RIGHT">
